@@ -9,6 +9,8 @@
  * license.
  */
 
+/* for setres*id() */
+#define _GNU_SOURCE
 #include <errno.h>
 #include <string.h>
 #include <unistd.h>
@@ -80,11 +82,22 @@ dmrc_save (GKeyFile *dmrc_file, const gchar *username)
     /* Update the users .dmrc */
     if (user)
     {
+	gboolean drop_privs = (geteuid () == 0);
+
+	/* Guard against privilege escalation through symlinks, etc. */
+	if (drop_privs)
+	{
+	    g_assert (setresgid (user_get_gid (user), user_get_gid (user), -1) == 0);
+	    g_assert (setresuid (user_get_uid (user), user_get_uid (user), -1) == 0);
+	}
         path = g_build_filename (user_get_home_directory (user), ".dmrc", NULL);
         g_file_set_contents (path, data, length, NULL);
-        if (getuid () == 0 && chown (path, user_get_uid (user), user_get_gid (user)) < 0)
-            g_warning ("Error setting ownership on %s: %s", path, strerror (errno));
         g_free (path);
+	if (drop_privs)
+	{
+	    g_assert (setresuid (0, 0, -1) == 0);
+	    g_assert (setresgid (0, 0, -1) == 0);
+	}
     }
 
     /* Update the .dmrc cache */
